2003-02-25  David Hyatt  <hyatt@apple.com>

	Fix for findNextLayer problems.  There was nothing wrong with
	findNextLayer per se... it was just getting called *way* more
	often than it needed to be.

	Fixes two bugs, 3159866 and 3168815.
	
        Reviewed by darin

        * khtml/rendering/render_container.cpp:
        (RenderContainer::appendChildNode):
        (RenderContainer::insertChildNode):
        * khtml/rendering/render_object.cpp:
        (addLayers):
        (RenderObject::addLayers):
        * khtml/rendering/render_object.h:

2003-02-25  Darin Adler  <darin@apple.com>

        Reviewed by Trey.
        
        - fixed 3177139 -- REGRESSION: tiny buttons with no text on dbaron test page
        
        This is actually a shortcoming in XML support. The reason it seemed like a regression
        is that this page was parsed as HTML before we had the XML support.
        
        * khtml/xml/xml_tokenizer.cpp:
        (XMLHandler::startElement): As the HTML tokenizer/parser does, call init() on all DOM
        tree elements before calling attach(). The KHTML guys want to get rid of init(), but until
        they do, we need the same thing here as in the HTML version.
        (XMLHandler::startCDATA): Ditto.
        (XMLHandler::enterText): Ditto.

        * khtml/html/htmlparser.cpp: (KHTMLParser::insertNode): Fix an obvious editing error that
        would lead to a second attach.

2003-02-25  David Hyatt  <hyatt@apple.com>

	Revert one of my optimizations.  It was bogus.  You can't use
	the parsed value of "inherit." 

	Fixes versiontracker.  Bug #3178204
	
        Reviewed by mjs

        * khtml/html/html_tableimpl.cpp:
        (HTMLTableElementImpl::createSharedCellDecls):

2003-02-25  David Hyatt  <hyatt@apple.com>

	reverseRuns was buggy and crashing.  3182658.
	
        Reviewed by mjs

        * khtml/rendering/bidi.cpp:

2003-02-25  David Hyatt  <hyatt@apple.com>

	Regression caused by my inclusion of inline flows in the bidi 